Bug 419014 - "*" appears in the window decoration while I switch between KCMs on X11
Summary: "*" appears in the window decoration while I switch between KCMs on X11
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_kwintabbox (other bugs)
Version First Reported In: unspecified
Platform: Neon Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-03-19 11:20 UTC by Patrick Silva
Modified: 2023-11-16 20:58 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
screen recording (1.25 MB, video/webm)
2020-03-19 11:20 UTC, Patrick Silva
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2020-03-19 11:20:22 UTC
Created attachment 126884 [details]
screen recording

SUMMARY
Watch the attached screen recording and observe the window title while I switch
between Kwin Scripts and Task Switcher kcms. We can see "*" during a few milliseconds. The same behavior occurs when I switch between Icons and Emoticons KCMs or between Proxy and SSL Preferences KCMs.

EXPECTED RESULT
"*" should never appear in the window decoration while we switch between KCMs.

SOFTWARE/OS VERSIONS
Operating System: KDE neon Unstable Edition
KDE Plasma Version: 5.18.80
KDE Frameworks Version: 5.69.0
Qt Version: 5.14.1
Comment 1 Nate Graham 2020-10-12 22:36:13 UTC
What was happening here was that something was marking the KCM as dirty for a moment. This should have been fixed with the work to fix all of the "Reset" and "Defaults" buttons for all KCMs, which landed in Plasma 5.20. I don't see it anymore.
Comment 2 Patrick Silva 2020-10-12 23:12:28 UTC
it's still reproducible for me on neon unstable.

Operating System: KDE neon Unstable Edition
KDE Plasma Version: 5.20.80
KDE Frameworks Version: 5.76.0
Qt Version: 5.15.0
Comment 3 Nate Graham 2020-10-12 23:24:11 UTC
Huh, that's weird. I don't see it.
Comment 4 Cyril Rossi 2020-10-14 15:56:13 UTC
I can see it sometimes if I switch quickly from KCM but it is very fast, on slower system it can be more visible.

It may trigger an update of its state while it still loading and display furtively this "*".
Comment 5 Bug Janitor Service 2020-10-14 16:05:16 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/349
Comment 6 Cyril Rossi 2021-04-28 07:37:44 UTC
Git commit c17914bc66718d0b9143654edf3c8d488709fe52 by Cyril Rossi.
Committed on 28/04/2021 at 07:07.
Pushed by crossi into branch 'master'.

KCM KWinTabbox on defaultsIndicatorsVisibleChanged do not update unmanagedWidgetDefaultState

M  +24   -13   src/kcmkwin/kwintabbox/main.cpp
M  +2    -0    src/kcmkwin/kwintabbox/main.h

https://invent.kde.org/plasma/kwin/commit/c17914bc66718d0b9143654edf3c8d488709fe52
Comment 7 Patrick Silva 2021-06-20 11:30:00 UTC
This bug is still happening only on X11 session.

Operating System: KDE neon Unstable Edition
KDE Plasma Version: 5.22.80
KDE Frameworks Version: 5.84.0
Qt Version: 5.15.3
Graphics Platform: X11
Comment 8 Patrick Silva 2023-11-16 20:58:07 UTC
Tested on Arch Linux running Plasma 6 alpha and neon unstable; cannot reproduce.