src/kcmkwin/kwintabbox/main.h
@@ -41,6 +41,7 @@ public Q_SLOTS:
 
 private Q_SLOTS:
     void updateUnmanagedState();
+    void updateDefaultIndicator();
     void configureEffectClicked();
     void slotGHNS();
 
@@ -53,6 +54,7 @@ private:
     void createConnections(KWinTabBoxConfigForm *form);
     bool updateUnmanagedIsNeedSave(const KWinTabBoxConfigForm *form, const TabBox::TabBoxSettings *config);
     bool updateUnmanagedIsDefault(KWinTabBoxConfigForm *form, const TabBox::TabBoxSettings *config);
+    void updateUiDefaultIndicator(bool visible, KWinTabBoxConfigForm *form, const TabBox::TabBoxSettings *config);
 
 private:
     KWinTabBoxConfigForm *m_primaryTabBoxUi = nullptr;
